--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,24 @@ name = "piece-compute-worker"
 main = "src/index.js"
 compatibility_date = "2024-01-17"
 
+# PROD!
+[env.production]
+# name = "piece-compute-production"
+account_id = "fffa4b4363a7e5250af8357087263b3a" # Protocol Labs CF account
+route = { pattern = "https://piece-compute.web3.storage/*", zone_id = "7eee3323c1b35b6650568604c65f441e" }
+r2_buckets = [
+  { binding = "CARPARK", bucket_name = "carpark-prod-0" }
+]
+
+# Staging!
+[env.staging]
+# name = "piece-compute-staging"
+account_id = "fffa4b4363a7e5250af8357087263b3a" # Protocol Labs CF account
+route = { pattern = "https://piece-compute-staging.web3.storage/*", zone_id = "7eee3323c1b35b6650568604c65f441e" }
+r2_buckets = [
+  { binding = "CARPARK", bucket_name = "carpark-prod-0" }
+]
+
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
