--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/test
       - name: Deploy to Staging
-        uses: cloudflare/wrangler-action@3.4.0
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{secrets.CF_TOKEN }}
           environment: 'staging'
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/test
       - name: Deploy to Production
-        uses: cloudflare/wrangler-action@3.4.0
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_TOKEN }}
           environment: 'production'
