--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "test": "ava --verbose test/*.spec.js",
     "lint": "standard"
   },
+  "dependencies": {
+    "@web3-storage/data-segment": "5.0.0",
+    "fr32-sha2-256-trunc254-padded-binary-tree-multihash": "^3.1.1",
+    "multiformats": "^13.0.1"
+  },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240117.0",
     "ava": "^3.15.0",
     "miniflare": "^3.20231218.3",
     "standard": "^17.1.0",
