--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
 name = "piece-compute-worker"
-main = "src/index.js"
-compatibility_date = "2024-01-17"
+main = "./dist/worker.js"
+compatibility_date = "2023-12-18"
+
+[build]
+command = "npm run build:debug"
 
 # PROD!
 [env.production]
