--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
 name = "piece-compute-worker"
-main = "src/index.js"
-compatibility_date = "2024-01-17"
+main = "./dist/worker.js"
+compatibility_date = "2023-12-18"
+
+[build]
+command = "npm run build:debug"
 
 # PROD!
 [env.production]
@@ -19,6 +22,7 @@ route = { pattern = "https://piece-compute-staging.web3.storage/*", zone_id = "7
 r2_buckets = [
   { binding = "CARPARK", bucket_name = "carpark-prod-0" }
 ]
+# TODO: staging bucket
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
